--- a/Web/css/comment.css
+++ b/Web/css/comment.css
@@ -46,6 +46,7 @@
     border-radius: 5px;
     font-weight: bold;
     line-height: 10px;
+    outline: none;
 }
 .commentFrame .operation .cancelReply {
     margin-left: 10px;
@@ -62,10 +63,12 @@
     border-radius: 5px;
     align-items: center;
     background-color: transparent;
-    transition: background-color .5s;
 }
 .commentFrame .comments .item .comment {
     display: flex;
+}
+.commentFrame .comments .item .comment > div {
+    flex-grow: 1;
 }
 .commentFrame .comments .item .replyComment {
     padding-left: 25px;
@@ -73,8 +76,23 @@
 .commentFrame .comments .item .replyComment .replyItem {
     padding-left: 3px;
     margin-top: 3px;
-    border-left: 2px solid black;
+    border-left: 2px solid rgb(199, 199, 199);
+    position: relative;
 }
+.commentFrame .comments .item .replyComment .replyItem::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(199, 199, 199);
+    height: 25px;
+    width: 2px;
+}
+
+.replyItem .name {
+    margin-left: 5px !important;
+}
+
 .commentFrame .comments .item img {
     margin-right: 10px;
     box-shadow: none;
@@ -84,6 +102,7 @@
 }
 .commentFrame .comments p {
     margin: 0;
+    transition: background-color .5s;
 }
 .commentFrame .comments .name {
     color: rgb(0, 0, 0);
@@ -97,14 +116,20 @@
 .commentFrame .comments .name .reply {
     margin-left: 10px;
     font-size: 12px;
-    color: rgb(61, 61, 61);
+    color: rgb(94, 94, 94);
     text-decoration: underline;
     cursor: pointer;
+    transition: color .5s;
+}
+.commentFrame .comments .name .reply:hover {
+    color: rgb(0, 0, 0);
 }
 .commentFrame .comments .value {
-    margin: 0px 0px 0px 10px;
+    padding-left: 5px;
+    margin: 0px 0px 0px 5px;
     font-weight: 500;
     color: rgb(74, 74, 74);
+    border-radius: 5px;
 }
 
 .row {
