--- a/Web/css/comment.css
+++ b/Web/css/comment.css
@@ -69,6 +69,7 @@
 }
 .commentFrame .comments .item .comment > div {
     flex-grow: 1;
+    padding-left: 5px;
 }
 .commentFrame .comments .item .replyComment {
     padding-left: 25px;
@@ -92,9 +93,11 @@
 .replyItem .name {
     margin-left: 5px !important;
 }
+.replyItem .value .recipient {
+    color: rgb(117, 19, 126);
+}
 
 .commentFrame .comments .item img {
-    margin-right: 10px;
     box-shadow: none;
     border: none;
     border-radius: 5px;
@@ -102,7 +105,6 @@
 }
 .commentFrame .comments p {
     margin: 0;
-    transition: background-color .5s;
 }
 .commentFrame .comments .name {
     color: rgb(0, 0, 0);
@@ -120,6 +122,8 @@
     text-decoration: underline;
     cursor: pointer;
     transition: color .5s;
+    user-select: none;
+    -moz-user-select: none;
 }
 .commentFrame .comments .name .reply:hover {
     color: rgb(0, 0, 0);
@@ -130,6 +134,10 @@
     font-weight: 500;
     color: rgb(74, 74, 74);
     border-radius: 5px;
+}
+
+.commentFrame .comments div {
+    transition: background-color .5s;
 }
 
 .row {
