--- a/Web/css/manage.css
+++ b/Web/css/manage.css
@@ -27,11 +27,13 @@ html, body {
     border: 1px solid rgba(212, 212, 212, 0.863);
     display: flex;
     align-items: center;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 .main .header .item {
     text-align: center;
     max-width: 120px;
+    min-width: 90px;
     width: 100%;
     height: 100%;
     line-height: 60px;
