--- a/Web/css/posts.css
+++ b/Web/css/posts.css
@@ -2,6 +2,7 @@ img {
     box-shadow: 0px 0px 6px 1px rgb(128, 128, 128);
     max-width: 100%;
     border-radius: 5px;
+    margin-top: 5px;
 }
 
 .main .posts_header .group_item {
