--- a/Web/css/lib/bootstrap.css
+++ b/Web/css/lib/bootstrap.css
@@ -4,6 +4,13 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+[permission] {
+  display: none;
+}
+.table th, .table td {
+  vertical-align: middle !important;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
