--- a/Web/css/send_posts.css
+++ b/Web/css/send_posts.css
@@ -31,6 +31,7 @@ img {
     border-radius: 5px;
     background-color: rgb(212, 212, 212);
     font-weight: 600;
+    min-width: 100px;
 }
 .edit-header .buttonFrame .btn:hover {
     background-color: rgb(185, 185, 185);
